# algorithm

./: .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  test.py
.devcontainer/: Dockerfile  Dockerfile.Python  devcontainer.json
AtCoder - Toyota Programming Contest 2023#8（AtCoder Beginner Contest 333）/E - Takahashi Quest/: 01.o.txt  03.o.txt
AtCoder - Toyota Programming Contest 2023#8（AtCoder Beginner Contest 333）/F - Bomb Game 2/: 01.o.txt
AtCoder - Toyota Programming Contest 2023#8（AtCoder Beginner Contest 333）/G - Nearest Fraction/: 01.i.txt  02.i.txt  03.i.txt  04.i.txt
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/A - Christmas Present/: 01.a.txt  02.o.txt  sol.cpp
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/B - Christmas Trees/: 03.o.txt  sol.cpp
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/C - Socks 2/: sol.cpp
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/D - Reindeer and Sleigh/: sol.cpp
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/E - Christmas Color Grid 1/: 01.a.txt  02.a.txt  02.o.txt  03.a.txt  03.o.txt  sol.cpp
AtCoder - UNIQUE VISION Programming Contest 2023 Christmas (AtCoder Beginner Contest 334)/F - Christmas Present 2/: 01.a.txt  01.o.txt  03.a.txt  03.o.txt  sol.cpp
Codeforces - Codeforces Round 898 (Div. 4)/A. Short Sort/: sol.cpp
Luogu/Doremys Paint 3/: sol.cpp
(+708 files in other folders)
